# metalab

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  main.py  mkdocs.yml  notebook.ipynb  pyproject.toml
.githooks/: pre-commit
docs/: architecture.md  cli.md  execution.md  index.md  key-concepts.md  preprocessing.md  remote-analysis-workflow.md  services.md  storage.md
docs/api/: capture.md  context.md  executors.md  experiment.md  index.md  operation.md  params.md  results.md  seeds.md  stores.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: run_all.py
examples/curve_fit/: README.md  run.py
examples/gene_perturbation/: README.md  pyproject.toml  run.py
examples/hypersearch/: README.md  run.py
examples/optbench/: README.md  __init__.py  benchmark.py  experiment.py  run.py  run_new.py
examples/pi_mc/: experiment.py  run.py
metalab/: __init__.py  _canonical.py  _ids.py  _serializable.py  cli.py  config.py  derived.py  events.py  experiment.py  manifest.py  operation.py  result.py  runner.py  runtime.py  schema.py  types.py
metalab/capture/: __init__.py  capture.py  logs.py  output.py  registry.py
metalab/capture/serializers/: __init__.py  json_.py  numpy_.py  pickle_.py
metalab/context/: __init__.py  builder.py  provider.py  spec.py
metalab/environment/: __init__.py  base.py  bundle.py  connector.py  direct.py  local.py  orchestrator.py  slurm.py  ssh_tunnel.py
metalab/executor/: __init__.py  _batch.py  base.py  config.py  core.py  handle.py  local_config.py  payload.py  process.py  registry.py  slurm.py  slurm_array_worker.py  slurm_config.py  thread.py
metalab/params/: __init__.py  grid.py  manual.py  random.py  resolver.py  source.py
metalab/progress/: __init__.py  base.py  display.py  factory.py  rich.py
metalab/seeds/: __init__.py  bundle.py  plan.py
metalab/services/: __init__.py  atlas.py  base.py  postgres.py  registry.py
metalab/services/atlas/: __init__.py  plugin.py
metalab/services/postgres/: __init__.py  _bash.py  config.py  lifecycle.py  plugin.py
metalab/store/: __init__.py  base.py  capabilities.py  config.py  file.py  layout.py  locator.py  postgres.py  postgres_index.py  transfer.py
tests/: __init__.py  test_config.py  test_environment_base.py  test_executor_config.py  test_orchestrator.py  test_slurm_services.py
tests/contract/: __init__.py  test_seed_discipline.py
tests/integration/: __init__.py  test_derived.py  test_file_store.py  test_runner.py
tests/unit/: __init__.py  test_atlas_export.py  test_canonical.py  test_capture.py  test_context_managers.py  test_derived.py  test_events.py  test_executor_core.py  test_file_hash.py  test_handle_registry.py  test_ids.py  test_operation.py  test_output_capture.py  test_params.py  test_payload.py  test_performance_overhaul.py  test_postgres_index.py  test_postgres_store.py  test_schema.py  test_seeds.py  test_slurm.py  test_slurm_context_serialization.py  test_slurm_progress.py  test_store_capabilities.py  test_store_config.py  test_store_locator.py  test_store_transfer.py
