[project]
name = "metalab"
version = "0.1.0"
description = "A general experiment runner: (FrozenContext, Params, SeedBundle) -> RunRecord + Artifacts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
pandas = ["pandas>=2.0"]
rich = ["rich>=13.0"]
full = ["numpy>=1.24", "pandas>=2.0", "rich>=13.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["metalab"]
