[project]
name = "metalab"
version = "0.1.0"
description = "A general experiment runner: (FrozenContext, Params, SeedBundle) -> RunRecord + Artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
pandas = ["pandas>=2.0"]
rich = ["rich>=13.0"]
postgres = ["psycopg[binary]>=3.0", "psycopg-pool>=3.0"]
full = [
    "numpy>=1.24",
    "pandas>=2.0",
    "rich>=13.0",
    "psycopg[binary]>=3.0",
    "psycopg-pool>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "rich>=13.0",
    "ruff>=0.4",
    "pyright>=1.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
metalab = "metalab.cli:main"

[project.entry-points."metalab.executors"]
local = "metalab.executor.local_config:LocalExecutorConfig"
slurm = "metalab.executor.slurm_config:SlurmExecutorConfig"

[project.entry-points."metalab.stores"]
file = "metalab.store.file:FileStoreConfig"
postgresql = "metalab.store.postgres:PostgresStoreConfig"
postgres = "metalab.store.postgres:PostgresStoreConfig"

[project.entry-points."metalab.services"]
postgres_slurm = "metalab.services.postgres:slurm_provider"
postgres_local = "metalab.services.postgres:local_provider"
atlas_slurm = "metalab.services.atlas:slurm_provider"
atlas_local = "metalab.services.atlas:local_provider"

[project.entry-points."metalab.service_discover"]
postgres_slurm = "metalab.services.postgres:discover_slurm"
postgres_local = "metalab.services.postgres:discover_local"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metalab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=errors, F=pyflakes (catches invalid imports), I=isort
ignore = [
    "E402",  # module level import not at top (common in __init__.py)
    "E501",  # line too long (handled by line-length above)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__ (re-exports)

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

# Workspace configuration (for local development)
[tool.uv.workspace]
members = ["atlas"]

[tool.uv.sources]
metalab = { workspace = true }
metalab-atlas = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
