[project]
name = "gene-perturbation-example"
version = "0.1.0"
description = "Gene perturbation example using dynamo (deprecated deps isolated)"
requires-python = ">=3.11"
dependencies = [
    "metalab",
    "dynamo-release>=1.4.3",
    "rich>=13.0",
]

[tool.uv.sources]
metalab = { workspace = true }

[tool.uv]
override-dependencies = [
    "louvain>=0.8.2",
    "matplotlib>=3.5,<3.9",
    "anndata>=0.9,<0.11",
    "numpy>=1.24,<2.0",
    "pandas>=1.5,<2.0",
]
